# IICPC

./: .env.example  .gitignore  Optimisations.txt  PS.txt  Plan.md  Plan.txt  Readme.md  analysis_results.md  create_optimized_submission.py  go.work  go.work.sum  implementation_plan.md  latency_analysis.md  stop.ps1  test_redpanda.go  test_ws.go  test_ws.js
.github/workflows/: ci.yml
frontend/dashboard-nextjs/: .env.example  Dockerfile  middleware.ts  package-lock.json  package.json
frontend/dashboard-nextjs/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  providers.tsx
high-performance/bot-engine-cpp/: CMakeLists.txt  Dockerfile  README.md
high-performance/bot-engine-cpp/include/bot_engine/: bot_pool.hpp  bot_worker.hpp  config.hpp  http_client.hpp  metrics_reporter.hpp  order_generator.hpp
high-performance/bot-engine-cpp/src/: main.cpp
high-performance/bot-engine-cpp/src/bot/: bot_pool.cpp  bot_worker.cpp  order_generator.cpp
high-performance/bot-engine-cpp/src/config/: bot_config.cpp
high-performance/bot-engine-cpp/src/metrics/: metrics_reporter.cpp
high-performance/bot-engine-cpp/src/net/: http_client.cpp
high-performance/telemetry-core-cpp/: CMakeLists.txt  README.md
high-performance/telemetry-core-cpp/.cache/clangd/index/: histogram.cpp.38AA76D5EF54A0B2.idx  histogram.hpp.1C1DF02839F7C1C6.idx  main.cpp.20BF703E2744000F.idx  metrics_aggregator.cpp.E9AEC2918A5ACEC5.idx  metrics_aggregator.hpp.C46A959108BFD7D6.idx  metrics_ingester.cpp.0A3B26C71A6422CB.idx  metrics_ingester.hpp.3041680ABBCD3D13.idx  metrics_store.cpp.33AA7DB0D282D1F7.idx  metrics_store.hpp.0BAF6B8D1BFE3129.idx  sliding_window.cpp.9A09D3AE9212FEAB.idx  sliding_window.hpp.AA48D43A79716B38.idx  stream_server.cpp.B177D6478F500AC3.idx  stream_server.hpp.4EB7D9B880EF0FA3.idx  telemetry_config.cpp.2236BE533AD42F69.idx  types.hpp.AB911BEB3B5776DC.idx
high-performance/telemetry-core-cpp/include/telemetry/: histogram.hpp  metrics_aggregator.hpp  metrics_ingester.hpp  metrics_store.hpp  sliding_window.hpp  stream_server.hpp  types.hpp
high-performance/telemetry-core-cpp/src/: main.cpp
high-performance/telemetry-core-cpp/src/aggregation/: histogram.cpp  metrics_aggregator.cpp  sliding_window.cpp
high-performance/telemetry-core-cpp/src/config/: telemetry_config.cpp
high-performance/telemetry-core-cpp/src/ingestion/: metrics_ingester.cpp
high-performance/telemetry-core-cpp/src/storage/: metrics_store.cpp
high-performance/telemetry-core-cpp/src/streaming/: stream_server.cpp
high-performance/validation-engine-cpp/: CMakeLists.txt  README.md
high-performance/validation-engine-cpp/.cache/clangd/index/: correctness_scorer.cpp.014D97C003E3CD73.idx  fill_validator.cpp.937124877138398E.idx  main.cpp.0DA36423E2488E99.idx  order.cpp.A8CEA33FB82E781B.idx  orderbook_reconstructor.cpp.6F8BE5B5C480F191.idx  orderbook_reconstructor.hpp.BA980891ADA7BDE4.idx  price_time_validator.cpp.1B0ED3E8A5E05423.idx  types.hpp.CC18E43DC43D1910.idx  validation_engine.cpp.5DB37BEF490FEC94.idx  validation_engine.hpp.7CFD0BE70425A98A.idx  validators.hpp.02D4F1A11E01279C.idx
high-performance/validation-engine-cpp/include/validation/: orderbook_reconstructor.hpp  types.hpp  validation_engine.hpp  validators.hpp
high-performance/validation-engine-cpp/src/: main.cpp
high-performance/validation-engine-cpp/src/orderbook/: order.cpp  orderbook_reconstructor.cpp
high-performance/validation-engine-cpp/src/scoring/: correctness_scorer.cpp
high-performance/validation-engine-cpp/src/validation/: fill_validator.cpp  price_time_validator.cpp  validation_engine.cpp
infrastructure/docker/: .env.example  README.md  alertmanager.yml  docker-compose.yml  init.sql  prometheus.yml  rules.yml
infrastructure/k8s/: 00-namespace-quota.yaml  01-config.yaml  02-stateful-services.yaml  api-gateway.yaml  benchmark-orchestrator.yaml  bot-fleet.yaml  correctness-engine.yaml  dashboard.yaml  submission-service.yaml  validation-service.yaml  websocket-service.yaml
pkg/: go.mod  go.sum
pkg/config/: env.go
pkg/events/: consumer.go  producer.go  types.go
pkg/health/: health.go
pkg/logging/: logger.go
pkg/metrics/: prometheus.go
pkg/middleware/: cors.go  request_logger.go  security_headers.go
pkg/security/: archive.go  archive_test.go  filename.go
pkg/server/: graceful.go
pkg/telemetry/: telemetry.go
proto/: common.proto  events.proto  orchestrator.proto  submission.proto  telemetry.proto  validation.proto
sample-trading-engine/: CMakeLists.txt  Dockerfile  README.md  exchange.cpp  exchange.hpp  main.cpp  orderbook.cpp  orderbook.hpp
scripts/: create_test_zip.py  dev-down.sh  dev-up.sh  generate_incorrect_submissions.py  generate_sample_submission.py  healthcheck.sh
services/admin-service-go/: Dockerfile  go.mod  go.sum
services/api-gateway-go/: .env.example  Dockerfile  README.md  go.mod  go.sum
services/auth-service-go/: Dockerfile  go.mod  go.sum
services/benchmark-orchestrator-go/: .env.example  Dockerfile  go.mod  go.sum
services/bot-fleet-go/: Dockerfile  go.mod  go.sum
services/correctness-engine-go/: Dockerfile  go.mod  go.sum
services/submission-service-go/: .env.example  Dockerfile  go.mod  go.sum
services/validation-service-go/: .env.example  Dockerfile  go.mod  go.sum
services/websocket-service-go/: .env.example  Dockerfile  go.mod  go.sum
traces/: 0d5475dc-0ab9-4d59-9660-81e52ff3ce83.trace.jsonl  0fccf09b-039d-4725-9421-098f5c08ca05.trace.jsonl  703eecbe-eb01-45b6-957d-d9cf17332c1e.trace.jsonl  8b936938-3b1f-4e4b-a772-89d577b93752.trace.jsonl  abe91e2f-3f89-4833-8321-653d9524e166.trace.jsonl  ca5dc5eb-7301-4592-86d9-5c270b067748.trace.jsonl  cd1e6b43-377d-4308-b256-70bc84853e28.trace.jsonl  da902103-85ea-4e3f-bfe0-3f8988ac7cc5.trace.jsonl  e786212d-6312-49c9-aba6-4607671eaac0.trace.jsonl  f50a6265-622c-4baa-a190-fd8a42741a89.trace.jsonl
trade-engine/: CMakeLists.txt
trade-engine/include/: Exchange.h  MarketData.h  MatchingEngine.h  OrderBook.h
trade-engine/src/: Exchange.cpp  MatchingEngine.cpp  main.cpp
trade-engine/tests/: matching_engine_test.cpp
(+123 files in other folders)
